Began optional enhancements

--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
         <section class="tempBlock">
             <h2>Temperature</h2>
             <section class="tempDisplays">
-                <section>
+                <section id="fDegContainer">
                     <button id="plusButton">▲</button>
                     <section class="temp">
                         <h3 id="tempContainer">32°F</h3>
+                    </section>
+                    <button id="minusButton">▼</button>
+                </section>
+                <section id="cDegContainer">
+                    <button id="plusButton">▲</button>
+                    <section class="temp">
+                        <h3 id="tempContainer">0°C</h3>
                     </section>
                     <button id="minusButton">▼</button>
                 </section>
