adds select element to html, creates selectSky function and adds event listener to be able to select skies accordingly

--- a/index.html
+++ b/index.html
@@ -21,19 +21,26 @@
                 <button id="increaseTempButton">⬆️</button>
                 <button id="decreaseTempButton">⬇️</button>
             </section>
-            <section id="temperature">Temp:</section>
+            <section id="temperature"></section>
         </div>
         <div id="box4">
-            <h3>4 Sky .</h3> 
+            <h3>4 Sky .</h3>
+            <select id="sky">
+                <option value="sunny">Sunny</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="rainy">Rainy</option>
+                <option value="snowy">Snowy</option>
+            </select>
         </div>
         <div id="box5">
             <h3>5 City Name</h3> 
         </div>
         <div id="box6">
             <h3>6 Weather Garden.</h3> 
+            <section id="currentSky"></section>
         </div>
     </div> 
-    <script src="src/index.js"></script>
+    <script src="src/index.js" ></script>
     
 </body>
 </html>
