adds conditional to increaseTemperature and decreaseTemperature functions to change the color of temperature accordingly and also to pick landscape emoji accordingly

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h3>5 City Name</h3> 
         </div>
         <div id="box6">
+            <section id="currentLandscape"></section>
             <h3>6 Weather Garden.</h3> 
             <section id="currentSky"></section>
         </div>
