adds input form and reset button to city grid box in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             </select>
         </div>
         <div id="box5">
-            <h3>5 City Name</h3> 
+            <h3>5 City Name</h3>
+            <label for="name">City Name:</label>
+              <input type="text" id="cityName" >
+            <button id="resetButton">Reset</button> 
         </div>
         <div id="box6">
             <section id="currentLandscape"></section>
