--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <h1> 1 Weather Report</h1>
         </div>
         <div id="box2">
-            <p> 2 For the lovely city of ✨My Hometown✨</p>
+            <p> 2 For the lovely city of <span id="currentCity">✨My Hometown✨</span></p>
         </div>
         <div id="box3" class="input-boxes">
             <h3>3 Temperature</h3> 
@@ -35,7 +35,7 @@
         <div id="box5">
             <h3>5 City Name</h3>
             <label for="name">City Name:</label>
-              <input type="text" id="cityName" >
+              <input type="text" id="cityName" />
             <button id="resetButton">Reset</button> 
         </div>
         <div id="box6">
