--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="gardenContent" class="garden-box">
         <div id="garden-inside">
-            <p id="ground">🌸🌿🌼 🐜🐜 🌷🌻🌿 🐜 ☘️🌱 🐜 🌻🌷</p>
+            <p id="ground">🌻🌷🌻🌷🌸🌿🌼 🌷🌻🌿 ☘️🌱 🌻🌷 🌻🌷🌸 🌿 🌼🌸🌿🌼 🌷🌻🌿 ☘️🌱 🌻🌷 🌻🌷🌸 🌿</p>
         </div>
     </section>
 
