makes default temperature 82 in index.html with red color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button id="increaseTempButton">⬆️</button>
                 <button id="decreaseTempButton">⬇️</button>
             </section>
-            <section id="temperature"></section>
+            <section id="temperature" class="red">82</section>
         </div>
         <div id="box4">
             <h3>4 Sky .</h3>
