impliments sky functionality in weather garden.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <div class="container">
                 <!-- adding button and heading to show the digits -->
                 <!-- increment() and decrement() functions on button click-->
-                <button id = "minus-button">-</button>
+                <button id = "minusButton">-</button>
                 <h2 id="counting"></h2>
-                <button id = "plus-button">+</button>
+                <button id = "plusButton">+</button>
             </div>
         </h1>
     </header>
 
     <header class = current-temp-box>
         <!-- give a suitable heading using h1 tag-->
-        <h1>The Sky Is:</h1>
+        <!-- <h1>The Sky Is:</h1>
             <h2 class="dropdown">
                 <button class="dropbtn">???</button>
                 <div class="dropdown-content">
@@ -45,15 +45,15 @@
                     <a href="#">Rainy</a>
                     <a href="#">Snowy</a>
                 </div>
-            </h2>
+            </h2> -->
             
-            <!-- <select id="skySelection" class="dropdown-content">
-                <option>--Please choose an option--</option>
-                <option>Sunny</option>
-                <option>Cloudy</option>
-                <option>Rainy</option>
-                <option>Snowy</option>
-            </select> -->
+        <select id="skySelection" class="dropdown-content">
+            <option>--Please choose an option--</option>
+            <option>Sunny</option>
+            <option>Cloudy</option>
+            <option>Rainy</option>
+            <option>Snowy</option>
+        </select>
 
     </header>
 
