basic css inspired by the template provided to us

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
             </div>
         </section>
         <section id="weather-garden">
-            <h2>Weather Garden</h2>
-            <div id='sky-background'>
-                <div id="sky">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
-                <div id="garden">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
-            </div>
+            <div id="weather-container">
+                <h2>Weather Garden</h2>
+                <div id='sky-background'>
+                    <div id="sky">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
+                    <div id="garden">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+                </div>
+            </div>  
         </section>
     </main>
     <script src="src/index.js" type="text/javascript"></script>
