--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="widget">
                 <h2>Temperature</h2>
                 <h3 class="fahrenheit" id="temp">70 ºF</h3>
-                <button id="increase-temp">Increase</button>
-                <button id="decrease-temp">Decrease</button>
+                <button id="increase-temp">⬆</button>
+                <button id="decrease-temp">⬇</button>
                 <button id="convert-temp">Convert to Celsius</button> 
             </div>
             <div class="widget">
