adds default city to city name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section id="change_city">
             <h4>City</h4>
-            <input type="text" id="user_input" placeholder="City Name" oninput="updateCity()"></input>
+            <input type="text" id="user_input" placeholder="City Name" oninput="updateCity()" value="My Favorite City 😌"></input>
             <button id="reset">Reset</button>
         </section>
     </section>
