extra css for font and buttons :)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body class="container">
 <!-- weather heading -->
     <header>
-        <div>Weather Report</div> 
-        <div>For the lovely city of</div>
-        <div id="city-name">...</div>
+        <div class="main-heading">Weather Report</div> 
+        <div class="second-heading">For the lovely city of</div>
+        <div id="city-name"></div>
     </header>
 <!-- weather garden -->
     <main id="weather">Weather Garden
@@ -52,12 +52,6 @@
         <input placeholder="Enter a city" id="city-input"/>
         <button id="reset">Reset</button>
     </section>
-    
-    <!-- <div class="container">
-        <div class="item1"> </div>
-        <div class="item2"> </div>
-        <div class="item3"> </div>
-    </div> -->
 
 <!-- weather ending -->  
     <footer></footer>
