JS written and connected!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
-    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <header class="header_section">
@@ -36,7 +36,7 @@
         </section>
         <section class="city_section">
             <h2 id="cityTitle">City Name</h2>
-            <input type="text" id="cityNameInput" value="✨Seattle✨" />
+            <input type="text" id="cityNameInput" value="🖤Seattle🖤" />
             <button id="cityNameReset" class="resetButton">Reset</button>
         </section>
     </div>
@@ -47,6 +47,6 @@
             <div id="landscape"></div>
         </div>
     </section>
-    <script src="scripts/index.js" ></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
