restructures the display of the weather garden

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Weather Report <em>for the lovely city of:</em><em id="lovelyCity">"of your choice"</em></h1>
+        <h1>Weather Report <em>for the lovely city of:</em><em id="lovelyCity">" Seattle."</em></h1>
     </div>
     <div class="box-block">
         <div class="features" id="temperatureContainer">
@@ -27,8 +27,8 @@
             </select>
         </div>
         <div class="features" id="cityContainer">
-            <p class="city">City Name</p>
-            <input id="city" type="text" placeholder="Enter City Name"/>
+            <p class="city" id="cityTyped">City Name</p>
+            <input id="city" type="text" placeholder="City Name"/>
             <input id="addResetButton" type="reset"/>
         </div>
         <di class="features" id="weather">
