--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header_section">
-        <h1>Weather Report</h1>
+        <h1>Weather Report for the lovely city of:</h1>
         <span class="subheader">
             <span id="headerCityName" class="header_city"></span>
         </span>
@@ -28,6 +28,8 @@
         <section class="sky_section">
             <h2 id= "skyTitle" >Sky</h2>
             <select id="skySelect">
+                <option>Surfing</option>
+                <option>MEOW!</option>
                 <option>Sunny</option>
                 <option>Cloudy</option>
                 <option>Rainy</option>
