--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body class="grid">
     <header>
-        <p><span class="report-span">Weather Report</span> For the lovely city of <span class="header-span">✨Seattle✨</span></p>
+        <p><span class="report-span">Weather Report</span> For the lovely city of <span id="header-span">✨Seattle✨</span></p>
     </header>
     <nav id="nav-containers">
         <div class="container"><h2>Temperature</h2>
             <ul id="temp-list">
                 <li><button id="upButton">⬆️</button></li>
                 <li><button id="downButton">⬇️</button></li>
-                <li><h2 id="temp-gauge">70</h2></li>
             </ul>
+            <h2 id="temp-gauge" class="normal">70</h2>
         </div>
         <div class="container" id="sky-container">
             <h2>Sky</h2>
@@ -31,6 +31,7 @@
         </div>
         <div class="container">
             <h2>City Name</h2>
+            <input type="text" id="input" name="input" size="10">
         </div>
     </nav>
     <section id="garden-container">
