fixes landscape default

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header id="city_name_header">
-        <h1 id="city_name">My Favorite City 😌</h1>
+        <h1 id="city_name">My Favorite City 😌</h1><br>
         <h1 id="weather_report">Weather Report</h2>
     </header>
     <section id="weather_body">
         <div id="sky_emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
-        <div id="ground_emojis">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</div>
+        <div id="ground_emojis">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
     </section>
     <section id="change_widgets">
         <section id="change_temp">
