--- a/index.html
+++ b/index.html
@@ -11,41 +11,43 @@
     <header>
         <section class="header-cover" id="top">
             <h1 class="title"> Kristin's Weather Report</h1>
-            <h3 id="subtitle">For thse lovely city of <span id="cityNameDisplay">Seattle</span></h3>
+            <h3 id="subtitle">For the lovely city of ✨<span id="cityNameDisplay">Seattle</span>✨</h3>
         </section>
     </header>
     <main>
-        <section id="temperatureContainer">
-            <h2 id="temperatureTitle">Temperature</h2>
-            <h2 id="temperatureDegree"></h2>
-            <button id="tempButtonUp"><i class="arrow up"></i></button></br>
-            <button id="tempButtonDown"><i class="arrow down"></i></button>
-
-        </section>
-
-        <section id="cityNameContainer">
-            <h2>City Name</h2>
-            <input type="text" id="inputCity" name="inputCity" placeholder="Enter City Name" />
-            <button id="resetCity">Reset</button>
-        </section>
-
-        <section id="skyContainer">
-            <h2>Sky</h2>
-            <label for="sky-select">Select a sky:</label>
-            <select class="sky" name="sky" id="sky-select">
-                <!-- <option value="">--Please choose an option--</option> -->
-                <option value="sunny">Sunny</option>
-                <option value="cloudy">Cloudy</option>
-                <option value="rainy">Rainy</option>
-                <option value="snowy">Snowy</option>
-                
-            </select>
-        </section>
-
-        <section id="weatherGardenContainer">
-            <h2>Weather Garden</h2>
-            <div id="skyEmojis"></div>
-            <span id="landscape"></span>
+        <section class ="content-wrapper">
+            <div class="items-wrapper">
+                    <div class="item-wrapper" id="temperatureContainer">
+                        <h2 class="item-titles">Temperature</h2>
+                        <div class="temp-wrapper">
+                            <h2 id="temperatureDegree"></h2>
+                            <div class="button-wrapper">
+                                <button id="tempButtonUp"><i class="arrow up"></i></button></br>
+                                <button id="tempButtonDown"><i class="arrow down"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item-wrapper" id="cityNameContainer">
+                        <h2 class="item-titles">City Name</h2>
+                        <input type="text" id="inputCity" name="inputCity" placeholder="Enter City Name" />
+                        <button id="resetCity">Reset</button>
+                    </div>
+                    <div class="item-wrapper" id="skyContainer">
+                        <h2 class="item-titles">Sky</h2>
+                        <label for="sky-select">Select a sky:</label>
+                        <select class="sky" name="sky" id="sky-select">
+                            <option value="sunny">Sunny</option>
+                            <option value="cloudy">Cloudy</option>
+                            <option value="rainy">Rainy</option>
+                            <option value="snowy">Snowy</option>
+                        </select>
+                    </div>
+                <div class="item-wrapper" id="weatherGardenContainer">
+                    <h2 class="item-titles">Weather Garden</h2>
+                    <div id="skyEmojis"></div>
+                    <span id="landscape"></span>
+                </div>
+            </div>
         </section>
     </main>
     
