--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body >
 
     <header>
-        <h1 id ="title" >Weather Report</h1>
-        <h2>  for the lovely city</h2>
+        <h1 id="title">Weather Report</h1>
+        <h2>for the lovely city</h2>
     </header>
     
     <main class="parent-side-container">
@@ -20,7 +20,6 @@
             <button id="decrement">⬇️</button>
             <p id = "temperature-value"> 0 </p>
             <button id ="increment">⬆️</button>
-    
         </form>
 
         <form class ="sky-side-container" action="#">
@@ -38,20 +37,18 @@
         <form  class = "city-side-container" action="#">
             <label for="city" class='subtitle'>City Name</label><br><br>
             <input type="text" id="city" name="city" placeholder="type here">
-            <!-- <input type="reset"> -->
             <button id="reset-button" type="button">Reset</button>
         </form>
-
 
         <section class= "container-garden">
             <h2> Weather Garden</h2>
             <div class="display-garden  inner-grid-garden">
-                <p id= "display-sky"  class ="inner-grid-sky"></p>
-                <p id ="display-landscape"  class ="inner-grid-land"></p>
+                <p id="display-sky"  class ="inner-grid-sky"></p>
+                <p id="display-landscape"  class ="inner-grid-land"></p>
             </div>
         </section>     
     </main> 
-    <footer> @Ana Gabriele</footer>
+    <footer><small>&copy; Copyright 2021, Ana Gabriele Soares</small></footer>
     <script src="src/index.js"></script>
 </body>
 </html>
