Edit html footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             </select>
         </form>
         
-
         <form  class = "city-side-container" action="#">
             <label for="city" class='subtitle'>City Name</label><br><br>
             <input type="text" id="city" name="city" placeholder="type here">
@@ -48,7 +47,7 @@
             </div>
         </section>     
     </main> 
-    <footer><small>&copy; Copyright 2021, Ana Gabriele Soares</small></footer>
+    <footer><small>&copy; Copyright 2021, Ana Singh. All rights reserved.</small></footer>
     <script src="src/index.js"></script>
 </body>
 </html>
