edit html footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </section>     
     </main> 
-    <footer><small>&copy; Copyright 2021, Ana Singh. All rights reserved.</small></footer>
+    <footer><small>&copy; Copyright 2021 by Ana Singh. All rights reserved.</small></footer>
     <script src="src/index.js"></script>
 </body>
 </html>
