--- a/index.html
+++ b/index.html
@@ -5,23 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Ruda' rel='stylesheet'>
     <link href="styles/index.css" rel="stylesheet">
+    
 </head>
 <body>
     <h1 id='display-city'>Seattle</h1>
-    <div id="sky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
-    <div id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
-    <div id="temp-box" class="fifty-degrees"></div>
-    <button id="increase">Increase</button>
-    <button id="decrease">Decrease</button>
-    <select name='sky' id='sky-select'>
-        <option value='sunny' selected>Sunny</option>
-        <option value='cloudy'>Cloudy</option>
-        <option value='rainy'>Rainy</option>
-        <option value='snowy'>Snowy</option>
-    </select>
-    <input type="text" id="city-name">
-    <button id='reset'>Reset City</button>
+    <div id=pretty-picture>
+        <div id="sky">  ☁️      ☀️ ☁️      ☁️ ☁️</div>
+        <div id="landscape">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</div>
+    </div>
+    <div id="temp-box" ></div> 
+    <div id='select-bar'>
+        <label for="sky-select">Set sky type:</label>
+        <select name='sky' id='sky-select'>
+            <option value='sunny' selected>Sunny</option>
+            <option value='cloudy'>Cloudy</option>
+            <option value='rainy'>Rainy</option>
+            <option value='snowy'>Snowy</option>
+        </select>
+    </div>
+    <div id="temp-buttons">
+        <button id="increase">Increase Temp</button>
+        <button id="decrease">Decrease Temp</button>
+    </div>
+    <div id="city-box">
+        <input type="text" id="city-name">
+        <button id='reset'>Reset City</button>
+    </div>
     <script src='src/index.js'></script>
 </body>
 </html>
