removes grid-box-2, copies and pastes content of grid item-2 into grid-item-1

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <main class="container">
         <section id="box1">
            <h1>Weather Report</h1>
+           <p>For the lovely city of <span id="currentCity">✨My Hometown✨</span></p>
         </section>
-        <section id="box2">
-            <p>For the lovely city of <span id="currentCity">✨My Hometown✨</span></p>
-        </section>
+        
         <section id="box3" class="input-boxes">
-            <h3>3 Temperature</h3> 
+            <h3>Temperature</h3> 
             <section>
                 <button id="increaseTempButton">⬆️</button>
                 <button id="decreaseTempButton">⬇️</button>
