Adds background image, makes temp font bigger, and centers weather garden on page

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </section>
     <section class="city-name">
         <h1>City Name</h1>
-        <input type="text" id="city-text-box">
-        <button id="city-reset-button">Change City</button>
+        <input type="text" id="city-text-box" placeholder="Where are you?">
+        <button id="city-reset-button">Update City</button>
     </section>
     <section class="weather-display">
         <h1>Weather Garden</h1>
