--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <section id ="headers">
-         <div id ="weather-header"><span class='bigger'>Weather Report</span> &nbsp;&nbsp; <span class="small">For the lovely city of </span> ✨<span class="dynamic">here change the city dynamically</span>✨</div>
+         <div id ="weather-header"><span class='bigger'>Weather Report</span> &nbsp;&nbsp; 
+            <span class="small">For the lovely city of </span> ✨<span class="dynamic">city</span>✨</div>
          <!-- <div id ="lovely-city"> For the lovely city of</div>
          <div id ="header-city">here change the city dynamically</div> -->
     </section>
-
-    <section id =three-boxes>
+<section id ="whole-body">
+    <section id ="three-boxes">
     <div id="temp">
             
         <label for="temps">Temperature</p>
@@ -35,16 +36,30 @@
             <option value="snowy">Snowy</option>
           </select>
         </div>
+       
         <div id="city-name">
             <label for="city">City Name</label>
             <input type="text" id = "city">
-            <input type="reset" value="Reset">
+            <input type="reset" id="reset">
         </div>
+  
     </section>
+    <section id="landscape">
+      <h3 id="weather-garden-title">Weather Garden</h3>
+      <div id="emojis-container">
+        <div id="sky-emoji"><p>I will display the sky</p></div>
+        <div id="plant-emoji"><p>I will display seasonal creatures</p></div>
+      </div>
+
+    </section>
+
+
+
+</section>
     <!-- <button name="button" id="selectbutton">Select </button>
    
      <input id="number" type="number"> -->
-     <footer>©ByRoza</footer>
+     <footer id"footer">©ByRoza</footer>
    <script src="src/index.js"></script>
 </body>
 </html>
