adds changes to styling of the page, sets default landscape and sky pictures to weather garden, cleans index.js from commented out code

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
            <p>For the lovely city of <span id="currentCity">✨My Hometown✨</span></p>
         </section>
         
-        <section id="box3" class="input-boxes">
+        <section class="box3" class="input-boxes">
             <h3>Temperature</h3> 
             <section>
                 <button id="increaseTempButton">⬆️</button>
                 <button id="decreaseTempButton">⬇️</button>
             </section>
-            <section id="temperature" class="red">82</section>
+            <div>
+                <span id="temperature" class="red">82</span>
+            </div>
         </section>
         <section id="box4">
             <h3>Sky</h3>
@@ -38,9 +40,9 @@
             <button id="resetButton">Reset</button> 
         </section>
         <section id="box6">
-            <section id="currentLandscape"></section>
+            <section id="currentLandscape">🌵__🐍_🦂_🌵🌵__🐍_🏜_🦂</section>
             <h3>Weather Garden</h3> 
-            <section id="currentSky"></section>
+            <section id="currentSky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</section>
         </section>
     </main> 
     <script src="src/index.js" ></script>
